<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/story_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.home.sosialmedia.StoryFragment">

    <TextView
        android:id="@+id/tv_menu_cerita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/ceita"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/account_icon"
        app:layout_constraintEnd_toStartOf="@+id/tv_menu_lokasi"
        app:layout_constraintTop_toTopOf="@+id/account_icon" />

    <TextView
        android:id="@+id/tv_menu_lokasi"
        android:layout_width="wrap_content"
...
