...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="16dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/button_keluar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="80dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#EB5757"
        android:text="Keluar"
...
